--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                     <a class="text-gray-800 hover:text-gray-600 pt-10 md:pt-0" href="javascript: void(0)">About</a>
                                 </li>
                                 <li class="md:mr-8 lg:mr-10 flex items-center">
-                                    <a class="text-gray-800 hover:text-gray-600 pt-10 md:pt-0" href="javascript: void(0)">Portfolio</a>
+                                    <a class="text-gray-800 hover:text-gray-600 pt-10 md:pt-0" href="javascript: void(0)">James Daniel Bain Portfolio</a>
                                 </li>
                                 <!-- 
                                 <li class="md:mr-8 lg:mr-10 flex items-center">
@@ -60,8 +60,8 @@
                 <div class="flex flex-col sm:flex-col md:flex-row lg:flex-row">
                     <div class="flex flex-col lg:w-6/12 md:w-6/12 px-4 lg:px-0 justify-center items-start">
                         <p class="text-2xl text-gray-800 font-light">Hi! I’am <span class="custom-foreground-color">James Daniel Bain </span> and</p>
-                        <h1 class="text-5xl sm:text-6xl md:text-4xl lg:text-6xl font-extrabold leading-tight text-gray-800">I’ll Help You Build Your Dream </h1>
-                        <p class="text-lg text-gray-600 font-light leading-relaxed pt-8">In quo quaerimus, non provident, similique sunt in voluptate et inter argumentum conclusionemque. Tum dicere exorsus est et quasi architecto beatae vitae dicta sunt, explicabo nemo. Certe inquam, pertinax non emolumento</p>
+                        <h1 class="text-5xl sm:text-6xl md:text-4xl lg:text-6xl font-extrabold leading-tight text-gray-800">I’ll Help You Build Your Dream on the Web</h1>
+                        <p class="text-lg text-gray-600 font-light leading-relaxed pt-8">Be it a website, an application, or a tool. </p>
                         <button class="Sf-ui-pro mt-10 flex items-center text-xl custom-foreground-color font-regular custom-border-bottom pb-2 mr-3 focus:outline-none">
                             Connect with me
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-narrow-right" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
